# Hyprtracker

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  hyprpm.toml
plugin/: .clangd  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  conandata.yml  flake.nix  hyprpm.toml  meson.build
plugin-meson/: hyprtracker.cpp  meson.build
plugin/src/: Store.cpp  Store.hpp  Tracker.cpp  Tracker.hpp  globals.hpp  hyprtracker.cpp  main.cpp  store.cpp  store.hpp
viewer/: .clangd  .gitignore  CMakeLists.txt  Makefile  TODO.md  conanfile.txt  flake.nix  meson.build
viewer/src/: application.cpp  application.h  main.cpp  state.cpp  state.h  viewer.cpp  viewer.h  viewer.hpp  window.cpp  window.h
viewer/src/charts/: barChart.cpp  barChart.hpp
viewer/src/managers/: alertManager.cpp  alertManager.hpp  dbManager.cpp  dbManager.hpp  singleton.hpp  widgetManager.cpp  widgetManager.hpp
viewer/src/windows/: chooser.cpp  chooser.hpp  daily.cpp  daily.hpp
viewer/subprojects/: peel.wrap
